# fastapi-event-bus

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/user_service/: events.py  main.py
fastapi_event_bus/: __init__.py  bus.py  exceptions.py  handler.py  matching.py
tests/: test_bus.py  test_handler.py  test_integration.py  test_matching.py
